--- a/fourn.html
+++ b/fourn.html
@@ -10,5 +10,8 @@
 <header>
 <a class="menu__logo" href="#menu">
 <img class="menu__logo" src="img/logo.png">
+</a>
 </header><div class="fournisseurs">
+  <div class="carre">
+  </div>
 </div>
