--- a/index.html
+++ b/index.html
@@ -1,52 +1,46 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html>
 <head>
 <title>SIMAGOT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 </head>
 <body>
-<header>
-<a class="menu__logo" href="#menu">
-<img class="menu__logo" src="img/logo.png">
-</header><div class="menu">
-<img class="menu__logoBlanc" src="img/logoBlanc.svg">
-</a>
-<div class="menu_options" id="menu">
-<a class="menu_optionsText menu__Rea" href="./home.html">Nos Réalisations
-</a>
-<a class="menu_optionsText menu__Rea" href="./part.html">Nos Partenaires
-</a>
-<a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
-</a>
-<a class="menu_optionsText menu__Contact" href="./contact.html">Contact
-</a>
-</div>
-</div><div class="welcome">
-<div  class="welcome__fond" >
-</div>
-<img  class="welcome__Trait1" src="img/Trait1.svg" href="Trait1">
+  <header>
+    <a class="logo" href="#menu">
+      <img class="logo" src="img/logo.png">
+    </a>
+    </header>
+    <div class="menu">
+
+    <img class="menu__logoBlanc" src="img/logoBlanc.svg">
+    <div class="menu_options" id="menu">
+      <a class="menu_optionsText menu__Rea" href="./home.html">Nos Réalisations
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./part.html">Nos Partenaires
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
+      </a>
+      <a class="menu_optionsText menu__Contact" href="./contact.html">Contact
+      </a>
+    </div>
+  </div>
+  <div class="welcome">
+    <div  class="welcome__fond" ></div>
+    <img  class="welcome__Trait1" src="img/Trait1.svg" href="Trait1">
 </img>
-<img  class="welcome__Trait2" src="img/Trait1.svg" href="Trait2">
+    <img  class="welcome__Trait2" src="img/Trait1.svg" href="Trait2">
 </img>
-<div class="welcome__Pein welcome__Text">PEINTURES</div>
-<h1 class="welcome__Rev welcome__Text">REVETEMENTS</h1>
-<h1 class="welcome__Cloi welcome__Text">CLOISONS SECHES</h1>
+    <div class="welcome__Pein welcome__Text">PEINTURES</div>
+    <h1 class="welcome__Rev welcome__Text">REVETEMENTS</h1>
+    <h1 class="welcome__Cloi welcome__Text">CLOISONS SECHES</h1>
 </div>
 <div class="histoire">
+<img src="img/carre.svg" alt="carre">
+<img src="img/carre.svg" alt="carre">
+<img src="img/carre.svg" alt="carre">
 </div>
-=======
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <script src="./node_modules/jquery/dist/jquery.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projet</title>
-</head>
-<body>
-  <h1>Nouveau Projet</h1>
-</body>
-</html>
->>>>>>> d8f09fa3a30c5d59a00bf92735bf5db76fec2326
+<div class="facebook">
+</div>
