--- a/fourn.html
+++ b/fourn.html
@@ -4,14 +4,34 @@
 <title>SIMAGOT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 <header>
-<a class="menu__logo" href="#menu">
-<img class="menu__logo" src="img/logo.png">
-</a>
-</header><div class="fournisseurs">
+  <a class="logo" href="#menu">
+      <img class="logo" src="img/logo.png">
+      <div class="container" ">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    </a>
+</header>
+  <div class="menu">
+    <img class="menu__logoBlanc" src="img/logoBlanc.svg">
+    <div class="menu_options" id="menu">
+      <a class="menu_optionsText menu__Rea" href="./">Nos Réalisations
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./part.php">Nos Partenaires
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
+      </a>
+      <a class="menu_optionsText menu__Contact" href="./contact.html">Contact
+      </a>
+    </div>
+  </div>
+<div class="fournisseurs">
   <div class="carre">
   </div>
 </div>
