--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,19 @@
 <header>
 <a class="menu__logo" href="#menu">
 <img class="menu__logo" src="img/logo.png">
-</header><div class="contact">
+</header>
+  <div class="menu">
+    <img class="menu__logoBlanc" src="img/logoBlanc.svg">
+    <div class="menu_options" id="menu">
+      <a class="menu_optionsText menu__Rea" href="./">Nos Réalisations
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./part.php">Nos Partenaires
+      </a>
+      <a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
+      </a>
+      <a class="menu_optionsText menu__Contact" href="./contact.html">Contact
+      </a>
+    </div>
+  </div>
+<div class="contact">
 </div>
