--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 <html>
 <head>
 <title>SIMAGOT</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+
 </head>
 <body>
   <header>
     <a class="logo" href="#menu">
       <img class="logo" src="img/logo.png">
+      <div class="container" ">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
     </a>
     </header>
     <div class="menu">
-
     <img class="menu__logoBlanc" src="img/logoBlanc.svg">
     <div class="menu_options" id="menu">
-      <a class="menu_optionsText menu__Rea" href="./home.html">Nos Réalisations
+      <a class="menu_optionsText menu__Rea" href="./">Nos Réalisations
       </a>
-      <a class="menu_optionsText menu__Rea" href="./part.html">Nos Partenaires
+      <a class="menu_optionsText menu__Rea" href="./part.php">Nos Partenaires
       </a>
       <a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
       </a>
@@ -38,9 +43,11 @@
     <h1 class="welcome__Cloi welcome__Text">CLOISONS SECHES</h1>
 </div>
 <div class="histoire">
-<img src="img/carre.svg" alt="carre">
-<img src="img/carre.svg" alt="carre">
-<img src="img/carre.svg" alt="carre">
+<ul  type="square">
+  <li type="square">Tea</li>
+  <li>Rochefort</li>
+</ul>
+
 </div>
 <div class="facebook">
 </div>
